--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,32 @@
 {
-  "name": "server",
+  "name": "dinebot-server",
+  "version": "1.0.0",
+  "description": "Backend server for DineBot - A chatbot-based restaurant management system",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "keywords": [
+    "chatbot",
+    "restaurant",
+    "express",
+    "socket.io",
+    "mongodb",
+    "mern"
+  ],
+  "author": "Sunil Pattupogula",
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.6.1",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
